Closed Bug 327100 Opened 19 years ago Closed 15 years ago

WindowsCE nsIFilePicker getFolder doesn't work

Categories

(Core :: Widget: Win32, defect)

ARM
Windows CE
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
fennec 1.0-wm+ ---

People

(Reporter: mgalli, Assigned: blassey)

Details

(Keywords: mobile)

Attachments

(2 files)

In preferences.js, we currently have a workaround, where we use open the filepicker in nsIFilePicker.modeSave. The ideal would be the impl supporting nsIFilePicket.modeGetFolder. 

With that ready, then we shall also update the following function in preferences.js
---

function downloadChooseFolder() {

  const nsIFilePicker = Components.interfaces.nsIFilePicker;
  var fp = Components.classes["@mozilla.org/filepicker;1"].createInstance(nsIFilePicker);
-  fp.init(window, null, nsIFilePicker.modeSave);

...

+  fp.init(window, null, nsIFilePicker.modeGetFolder);
Summary: Minimo Preferences -> Download Pane needs getFolder → WindowsCE nsIFilePicker getFolder doesn't work
Assignee: dougt → nobody
Component: General → Widget: Win32
Keywords: mobile
Product: Minimo → Core
QA Contact: chofmann → win32
Version: WinCE → unspecified
the file picker on windows mobile has been disabled.
tracking-fennec: --- → 1.0-wm+
taking..
Assignee: nobody → bugmail
Status: NEW → ASSIGNED
OS: Windows XP → Windows CE
Hardware: x86 → ARM
Attached image screen shot
Attachment #388571 - Flags: review?(doug.turner) → review+
Attachment #388572 - Attachment is patch: false
Attachment #388572 - Attachment mime type: text/plain → image/png
pushed http://hg.mozilla.org/mozilla-central/rev/0db3d7d6ed63
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: