bug 327100 - WindowsCE nsIFilePicker getFolder doesn't work r=dougt