widget/src/windows/nsFilePicker.cpp
@@ -204,8 +204,12 @@ NS_IMETHODIMP nsFilePicker::ShowW(PRInt16 *aReturnVal)
     ofn.lpstrTitle   = (LPCWSTR)mTitle.get();
     ofn.lpstrFilter  = (LPCWSTR)filterBuffer.get();
     ofn.nFilterIndex = mSelectedType;
-    ofn.hwndOwner    = (HWND)
-      (mParentWidget.get() ? mParentWidget->GetNativeData(NS_NATIVE_WINDOW) : 0); 
+#ifdef WINCE_WINDOWS_MOBILE
+    // If we're running fullscreen the dialog inherits that, which is bad
+    ofn.hwndOwner    = (HWND) 0;
+#else
+    ofn.hwndOwner    = (HWND) (mParentWidget.get() ? mParentWidget->GetNativeData(NS_NATIVE_WINDOW) : 0); 
+#endif
     ofn.lpstrFile    = fileBuffer;
     ofn.nMaxFile     = FILE_BUFFER_SIZE;
 
@@ -276,7 +280,13 @@ NS_IMETHODIMP nsFilePicker::ShowW(PRInt16 *aReturnVal)
             result = ::GetSaveFileNameW(&ofn);
           }
         }
+      } 
+#ifdef WINCE_WINDOWS_MOBILE
+      else if (mMode == modeGetFolder) {
+        ofn.Flags = OFN_PROJECT | OFN_FILEMUSTEXIST;
+        result = ::GetOpenFileNameW(&ofn);
       }
+#endif
       else {
         NS_ASSERTION(0, "unsupported mode"); 
       }
